# mailbot

./: .gitignore  CMakeLists.txt  Makefile  conf.c  conf.h  fix-emails.go  gen-cmake.sh  imap.c  imap.h  macports.cmake  mailbot.c  parse-trans.c  readme.txt  synopsis.txt  usage.txt  util.c  util.h
